Update social media and gh pages doman name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-website",
-  "homepage": "https://secondwin.github.io/personal-website/",
+  "homepage": "https://thmsngyn.github.io/personal-website/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
